# release-notes-automation

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  test_extraction.py
