[project]
name = "mridula"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-api-python-client>=2.172.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "lxml>=5.4.0",
    "python-docx>=1.1.2",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
    "selenium>=4.21.0",
    "webdriver-manager>=4.0.1",
]
